# la-mpv

./: JeaFx.json  OwenThurm.json  RileyColeman.json  ScrollReader.json  SmartRisk.json  TechSoleyman.json  VRSEN.json  channels-ai.txt  channels-dating.txt  channels-health.txt  channels-job.txt  channels-rust.txt  channels-trading.txt  channels-web-dev.txt  channels-web3.txt  channels-wisdom.txt  channels.txt  source.csv
youtube_videos_fetcher/: Cargo.toml  youtube_videos.json  youtube_videos_with_durations.json
youtube_videos_fetcher/src/: main.rs
youtube_viewer/: Cargo.toml  watched_videos.db
youtube_viewer/src/: main.rs
youtube_viewer/static/: OwenThurm.html  index.html  style.css
