[package]
name = "youtube_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
actix-files = "0.6.6"
rusqlite = { version = "0.26", features = ["bundled"] }
